--- a/Project-01-Natuor/sass/layout/_navigation.scss
+++ b/Project-01-Natuor/sass/layout/_navigation.scss
@@ -1,62 +1,34 @@
 .navigation {
   position: relative;
 
-  &__nav {
-    height: 100vh;
+  &__background-wrapper {
+    @include test-box;
+    background-color: $color-primary;
     position: fixed;
-    width: 100%;
-    z-index: 2000;
-  }
-
-  &__list {
-    @include absolute-center;
-  }
-
-    &__item {
-      // display: inline-block;
-      text-decoration: none;
-    }
-
-  &__link {
-    text-decoration: none;
-  }
-
-  &__checkbox {
-    visibility: hidden;
-  }
-
-  &__checkbox:checked ~ &__background-circle {
-    transform: scale(200);
-  }
-
-  &__btn-group {
-    height: 2rem;
-    position: fixed;
-    right: 7rem;
-    top: 7rem;
-    width: 2rem;
+    right: 5rem;
+    top: 5rem;
     z-index: 1000;
   }
 
-  &__toggle-btn {
-    @include absolute-center;
-    background-color: white;
-    border-radius: 50%;
-    box-shadow: 0 0 4rem $color-box-shadow;
-    cursor: pointer;
-    display: inline-block;
-    height: $nav-btn-diameter;
-    width: $nav-btn-diameter;
-    z-index: 4000;
+  &__nav {
+    @include test-box;
+
+    height: 100vh;  
+    width: 100vw;
+    top: 0rem;
+    right: 0rem;
+
+    // background-color: $color-secondary-dark;
+    position: fixed;
+    z-index: 2000;
   }
 
-  &__background-circle {
-    @include absolute-center;
-    background-image: radial-gradient($color-primary-light, $color-primary-dark);
-    border-radius: 50%;
-    height: 2rem;
-    transition: all .3s;
-    width: 2rem;
+  &__checkbox-wrapper {
+    @include test-box;
+    background-color: $color-white;
+    position: fixed;
+    top: 7rem;
+    right: 7rem;
     z-index: 3000;
   }
 }
